--- a/styles/portfolio-2021-about-2.0-specific.css
+++ b/styles/portfolio-2021-about-2.0-specific.css
@@ -27,8 +27,8 @@ grid-row: 2/span 1;
   grid-column: 9/span 4;
   grid-row: 1/span 3;
   /* width: 100%; */
-  height:100%;
-  width:auto;
+  height:auto;
+  width:100%;
   /* box-shadow: 0px 0px 19px -6px #000000; */
 }
 
