--- a/styles/portfolio-2021-nih-specific.css
+++ b/styles/portfolio-2021-nih-specific.css
@@ -514,10 +514,11 @@ grid-row: 3/span 1;
   .xml-sitemap{
     grid-column: 1/span 12;
     grid-row-start:6;
+    text-align: center;
   }
 
   .xml-sitemap-image{
-    width:100%;
+    width:50%;
   }
 
   .excel-content-intro{
@@ -530,10 +531,11 @@ grid-row: 3/span 1;
     /* box-shadow: 0px 0px 19px -6px #000000; */
     grid-column: 1/span 12;
     grid-row-start:8;
+    text-align: center;
   }
 
   .content-snapshot-image{
-    width:100%;
+    width:50%;
   }
 
   .content-audit-structure-list{
@@ -614,10 +616,11 @@ grid-row: 3/span 1;
   .navigation-content-findings{
     grid-column: 1/span 12;
     grid-row-start:7;
+    text-align: center;
   }
 
   .navigation-content-findings-image{
-    width: 100%
+    width: 50%
   }
 
   .page-findings-headline{
@@ -629,6 +632,7 @@ grid-row: 3/span 1;
   .page-findings{
     grid-column: 1/span 12;
     grid-row-start:9;
+    text-align: center;
   }
 
   .page-findings-image{
@@ -714,10 +718,11 @@ grid-row: 3/span 1;
   .inventor-page-findings{
     grid-column: 1/span 12;
     grid-row-start:22;
+    text-align: center;
   }
 
   .inventor-page-findings-image{
-    width:100%;
+    width:50%;
   }
 
   .product-findings-headline{
@@ -740,10 +745,11 @@ grid-row: 3/span 1;
   .document-findings{
     grid-column: 1/span 12;
     grid-row-start:26;
+    text-align: center;
   }
 
   .document-findings-image{
-    width:100%;
+    width:50%;
   }
 
   .rss-findings-headline{
@@ -755,10 +761,11 @@ grid-row: 3/span 1;
   .rss-findings{
     grid-column: 1/span 12;
     grid-row-start:28;
+    text-align: center;
   }
 
   .rss-findings-image{
-    width:100%;
+    width:50%;
   }
 
 
@@ -771,10 +778,11 @@ grid-row: 3/span 1;
   .multimedia-findings{
     grid-column: 1/span 12;
     grid-row-start:30;
+    text-align: center;
   }
 
   .multimedia-findings-image{
-    width:100%;
+    width:50%;
   }
 
   .global-navigation-findings-headline{
@@ -841,6 +849,10 @@ grid-row: 3/span 1;
       .reviewing-inventory-pages-image{
         width:100%;
       }
+
+      .inventor-page-findings-image{
+        width:100%;
+      }
   }
 
 /* Desktop site architecture settings */
@@ -889,10 +901,11 @@ grid-row: 3/span 1;
 .impact-feasibility-matrix{
   grid-column: 1/span 12;
   grid-row-start:7;
+  text-align: center;
 }
 
 .impact-feasibility-matrix-image{
-  width: 100%;
+  width: 75%;
 }
 
 .site-analytics-headline{
@@ -908,19 +921,21 @@ grid-row: 3/span 1;
 .site-search{
   grid-column: 1/span 12;
   grid-row-start:10;
+  text-align: center;
 }
 
 .site-search-image{
-  width:100%;
+  width:50%;
 }
 
 .visit-duration{
   grid-column: 1/span 12;
   grid-row-start:11;
+  text-align: center;
 }
 
 .visit-duration-image{
-  width:100%;
+  width:50%;
 }
 
 .user-flows-headline{
@@ -937,10 +952,11 @@ grid-row: 3/span 1;
 .search-resuts-flow{
   grid-column: 1/span 12;
   grid-row-start:14;
+  text-align: center;
 }
 
 .search-resuts-flow-image{
-  width:100%;
+  width:50%;
 }
 
 .user-login{
@@ -952,6 +968,7 @@ grid-row: 3/span 1;
 .user-login-flow{
   grid-column: 1/span 12;
   grid-row-start:16;
+  text-align: center;
 }
 
 .user-login-image{
@@ -967,10 +984,11 @@ grid-row: 3/span 1;
 .saved-search-logged-in-flow{
   grid-column: 1/span 12;
   grid-row-start:18;
+  text-align: center;
 }
 
 .saved-search-logged-in-flow-image{
-  width:100%;
+  width:50%;
 }
 
 .saved-search-cookies{
@@ -988,10 +1006,11 @@ grid-row: 3/span 1;
 .saved-search-cookies-flow{
   grid-column: 1/span 12;
   grid-row-start:21;
+  text-align: center;
 }
 
 .saved-search-cookies-flow-image{
-  width:100%;
+  width:50%;
 }
 
 .revising-navigation-headline{
@@ -1017,10 +1036,11 @@ grid-row: 3/span 1;
 .current-navigation{
   grid-column: 1/span 12;
   grid-row-start:26;
+  text-align: center;
 }
 
 .current-navigation-image{
-  width:100%;
+  width:50%;
 }
 
 .revised-navigaton-list-headline{
@@ -1056,10 +1076,11 @@ grid-row: 3/span 1;
 .navigation-change-symbols{
   grid-column: 1/span 12;
   grid-row-start:33;
+  text-align: center;
 }
 
 .navigation-change-symbols-image{
-  width:100%;
+  width:25%;
 }
 
 .licensing-headline{
@@ -1075,10 +1096,11 @@ grid-row: 3/span 1;
 .navigation-changes-licensing{
   grid-column: 1/span 12;
   grid-row-start:36;
+  text-align: center;
 }
 
 .navigation-changes-licensing-image{
-  width:100%;
+  width:50%;
 }
 
 .policy-headline{
@@ -1094,10 +1116,11 @@ grid-row: 3/span 1;
 .navigation-changes-policy{
   grid-column: 1/span 12;
   grid-row-start:39;
+  text-align: center;
 }
 
 .navigation-changes-policy-image{
-  width:100%;
+  width:50%;
 }
 
 .royalty-headline{
@@ -1113,10 +1136,11 @@ grid-row: 3/span 1;
 .navigation-changes-royalty{
   grid-column: 1/span 12;
   grid-row-start:42;
+  text-align: center;
 }
 
 .navigation-changes-royalty-image{
-  width:100%;
+  width:50%;
 }
 
 
@@ -1133,10 +1157,11 @@ grid-row: 3/span 1;
 .navigation-changes-outreach{
   grid-column: 1/span 12;
   grid-row-start:45;
+  text-align: center;
 }
 
 .navigation-changes-outreach-image{
-  width:100%;
+  width:50%;
 }
 
 .resources-headline{
@@ -1152,10 +1177,11 @@ grid-row: 3/span 1;
 .navigation-changes-resources{
   grid-column: 1/span 12;
   grid-row-start:48;
+  text-align: center;
 }
 
 .navigation-changes-resources-image{
-  width:100%;
+  width:50%;
 }
 
 .reports-headline{
@@ -1171,10 +1197,11 @@ grid-row: 3/span 1;
 .navigation-changes-reports{
   grid-column: 1/span 12;
   grid-row-start:51;
+  text-align: center;
 }
 
 .navigation-changes-reports-image{
-  width:100%;
+  width:50%;
 }
 
 .faqs-headline{
@@ -1190,10 +1217,11 @@ grid-row: 3/span 1;
 .navigation-changes-faqs{
   grid-column: 1/span 12;
   grid-row-start:54;
+  text-align: center;
 }
 
 .navigation-changes-faqs-image{
-  width:100%;
+  width:50%;
 }
 
 .about-headline{
@@ -1209,10 +1237,11 @@ grid-row: 3/span 1;
 .navigation-changes-about{
   grid-column: 1/span 12;
   grid-row-start:57;
+  text-align: center;
 }
 
 .navigation-changes-about-image{
-  width:100%;
+  width:50%;
 }
 
 .current-sitemap-headline{
@@ -1223,10 +1252,11 @@ grid-row: 3/span 1;
 .current-sitemap{
   grid-column: 1/span 12;
   grid-row-start:59;
+  text-align: center;
 }
 
 .current-sitemap-image{
-  width:100%;
+  width:25%;
 }
 
 .revised-sitemap-headline{
@@ -1237,6 +1267,7 @@ grid-row: 3/span 1;
 .revised-sitemap{
   grid-column: 1/span 12;
   grid-row-start:61;
+  text-align: center;
 }
 
 .revised-sitemap-image{
