--- a/styles/portfolio-2021-verve-2.0-specific.css
+++ b/styles/portfolio-2021-verve-2.0-specific.css
@@ -554,6 +554,9 @@
   margin:0 auto;
   scroll-behavior: smooth;
   /* margin:5%; */
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1366px;
 }
 
 
