--- a/styles/portfolio-2021-about-2.0-specific.css
+++ b/styles/portfolio-2021-about-2.0-specific.css
@@ -8,6 +8,8 @@
   max-width: 1366px;
   margin:80px;
   height:416px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-headline{
@@ -80,6 +82,8 @@ grid-row: 2/span 1;
   grid-template-rows: auto auto; */
   max-width: 1366px;
   margin:80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
