--- a/styles/portfolio-2021-contact-2.0-specific.css
+++ b/styles/portfolio-2021-contact-2.0-specific.css
@@ -7,6 +7,8 @@
   grid-template-rows: repeat(3,1fr);
   max-width: 1366px;
   margin:80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-headline{
