--- a/styles/portfolio-2021-floodlight-specific.css
+++ b/styles/portfolio-2021-floodlight-specific.css
@@ -10,6 +10,8 @@
   max-width: 1366px;
   margin:80px;
   height:416px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-headline{
@@ -92,7 +94,6 @@ grid-row: 3/span 1;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: auto auto;
     max-width: 1366px;
-    margin:0px;
     padding:80px;
     background-color: #35435F;
   }
@@ -179,6 +180,9 @@ grid-row: 3/span 1;
   padding-right: 80px; */
   padding-bottom: 80px;
   background-color: #EBD7D0;
+  max-width: 1366px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -398,8 +402,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -475,8 +479,8 @@ grid-row: 3/span 1;
     grid-template-rows: repeat(19,auto);
     max-width: 1366px;
     margin:80px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .phase-1-headline{
@@ -817,8 +821,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
-    margin-left: 20%;
-    margin-right:20%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .phase-2-headline{
@@ -1457,8 +1461,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
 
   }
 
@@ -1713,8 +1717,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
 
   }
 
@@ -1973,8 +1977,8 @@ grid-row: 3/span 1;
     grid-template-rows: auto auto;
     max-width: 1366px;
     margin:80px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
 
   }
 
