--- a/styles/portfolio-2021-homepage-specific.css
+++ b/styles/portfolio-2021-homepage-specific.css
@@ -10,6 +10,8 @@
   max-width: 1366px;
   margin:80px;
   height:416px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-headline{
@@ -115,6 +117,8 @@ margin-top: 50px;
     align-items: center;
     padding-top: 50px;
     padding-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .brands-callout-headline{
@@ -355,6 +359,8 @@ margin-top: 50px;
   grid-template-rows: auto auto auto auto;
   max-width: 1366px;
   margin:80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .work-headline{
@@ -975,6 +981,8 @@ margin-top: 50px;
   grid-template-rows: auto auto auto;
   max-width: 1366px;
   margin:80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .about-headline{
@@ -1032,7 +1040,6 @@ margin-top: 50px;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: auto auto;
     max-width: 1366px;
-    margin:0px;
     padding:80px;
     background-color: #35435F;
   }
