--- a/styles/portfolio-2021-my-work-specific.css
+++ b/styles/portfolio-2021-my-work-specific.css
@@ -10,6 +10,8 @@
   max-width: 1366px;
   margin:80px;
   height:416px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-headline{
@@ -100,6 +102,8 @@ grid-row: 2/span 1;
   grid-template-rows: auto auto auto;
   max-width: 1366px;
   margin:80px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .work-headline{
@@ -589,7 +593,6 @@ grid-row: 2/span 1;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: auto auto;
     max-width: 1366px;
-    margin:0px;
     padding:80px;
     background-color: #35435F;
   }
