--- a/styles/portfolio-2021-nih-specific.css
+++ b/styles/portfolio-2021-nih-specific.css
@@ -10,6 +10,8 @@
   max-width: 1366px;
   margin:80px;
   height:416px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hero-headline{
@@ -95,6 +97,8 @@ grid-row: 3/span 1;
     margin:0px;
     padding:80px;
     background-color: #35435F;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .footer-email{
@@ -179,6 +183,9 @@ grid-row: 3/span 1;
   padding-right: 80px; */
   padding-bottom: 80px;
   background-color: #EBD7D0;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1366px;
 }
 
 
@@ -398,8 +405,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right: 20%;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -475,8 +482,8 @@ grid-row: 3/span 1;
     grid-template-rows: repeat(10,auto);
     max-width: 1366px;
     margin:80px;
-    margin-left: 20%;
-    margin-right: 20%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .content-audit-headline{
@@ -581,9 +588,8 @@ grid-row: 3/span 1;
     grid-template-columns: repeat(12,1fr);
     grid-template-rows: auto;
     max-width: 1366px;
-    margin:80px;
-    margin-left: 20%;
-    margin-right:20%;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   .content-audit-findings-headline{
@@ -888,8 +894,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right:20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .site-architecture-headline{
@@ -1389,8 +1395,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right:20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .preparing-wireframes-headline{
@@ -1622,8 +1628,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right:20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .interactive-prototype-headline{
@@ -1701,8 +1707,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right:20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .looking-ahead-headline{
@@ -1744,8 +1750,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right:20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .final-layout-headline{
@@ -1859,8 +1865,8 @@ grid-row: 3/span 1;
   grid-template-rows: auto;
   max-width: 1366px;
   margin:80px;
-  margin-left: 20%;
-  margin-right:20%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .key-takeaways-headline{
